correct write FixedString(N)

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,13 @@ go:
 services:
   - docker
 install:
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
   - go get github.com/stretchr/testify/assert
 before_install:
   - docker pull yandex/clickhouse-server
   - docker run -d --name clickhouse-server -p 9000:9000 --ulimit nofile=262144:262144 yandex/clickhouse-server
   - docker ps -a
 script:
-  - go test -v .
+  - go test -v -race -covermode=count -coverprofile=coverage.out .
+  - goveralls -coverprofile=coverage.out -service travis-ci -repotoken $COVERALLS_TOKEN
