docker: CH run cmd has been changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - go get github.com/stretchr/testify/assert
 before_install:
   - docker pull yandex/clickhouse-server
-  - docker run -d --name clickhouse-server -p 9000:9000 --ulimit nofile=262144:262144 yandex/clickhouse-server
+  - docker run -d --name clickhouse-server --net=host --ulimit nofile=262144:262144 yandex/clickhouse-server
   - docker ps -a
 script:
   - go test -v -race -covermode=count -coverprofile=coverage.out .
