--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 sudo: required
 language: go
 go: 
-  - 1.7
   - 1.8
 services:
   - docker
@@ -11,7 +10,7 @@ install:
   - go get github.com/stretchr/testify/assert
 before_install:
   - docker pull yandex/clickhouse-server
-  - docker run -d -p 127.0.0.1:9000:9000 --name some-clickhouse-server --ulimit nofile=262144:262144 yandex/clickhouse-server:1.1.54159
+  - docker run -d -p 127.0.0.1:9000:9000 --name some-clickhouse-server --ulimit nofile=262144:262144 yandex/clickhouse-server
   - docker ps -a
 script:
   - go test -v -race -covermode=count -coverprofile=coverage.out .
