Use Docker image we actually pulled

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - go get github.com/stretchr/testify/assert
 before_install:
   - docker pull yandex/clickhouse-server
-  - docker run -d -p 127.0.0.1:9000:9000 --name some-clickhouse-server --ulimit nofile=262144:262144 yandex/clickhouse-server:1.1.54159
+  - docker run -d -p 127.0.0.1:9000:9000 --name some-clickhouse-server --ulimit nofile=262144:262144 yandex/clickhouse-server
   - docker ps -a
 script:
   - go test -v -race -covermode=count -coverprofile=coverage.out .
