--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ install:
   - go get golang.org/x/tools/cmd/cover
   - go get github.com/stretchr/testify/assert
   - go get github.com/cloudflare/golz4
+  - go get github.com/bkaradzic/go-lz4
+  - go get github.com/pierrec/lz4
+
 before_install:
   - docker --version
   - docker-compose --version
