--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
   - 1.12.x
   - 1.13.x
   - master
-go_import_path: github.com/kshvakov/clickhouse
+go_import_path: github.com/ClickHouse/clickhouse-go
 services:
   - docker
 install:
