tests: try docker

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,23 +19,14 @@ jobs:
         clickhouse:
           - 21.8.11.4
           - 21.12.3.32
+    services:
+      clickhouse:
+        image: clickhouse-server:${{ matrix.clickhouse }}
+        ports:
+          - 9000:9000
+        options: --ulimit nofile=262144:262144
     steps:
       - uses: actions/checkout@v2
-
-      - name: Add ClickHouse repo
-        run: |
-          sudo apt-get install apt-transport-https ca-certificates dirmngr
-          sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv E0C56BD4
-
-          echo "deb https://repo.clickhouse.com/deb/stable/ main/" | sudo tee \
-              /etc/apt/sources.list.d/clickhouse.list
-          sudo apt-get update
-
-      - name: Install ClickHouse ${{ matrix.clickhouse }}
-        run: sudo apt-get install -y clickhouse-server=${{ matrix.clickhouse }}
-
-      - name: Run ClickHouse
-        run: sudo service clickhouse-server start
 
       - name: Install Go ${{ matrix.go }}
         uses: actions/setup-go@v2.1.5
