test matrix: add 22.1.2.2

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,7 +20,8 @@ jobs:
           - 19.11.12.69
           - 20.1.2.4
           - 21.1.7.1
-          - 21.12.3.32
+          - 22.1.2.2
+          - latest
 
     services:
       clickhouse:
