test matrix: add go 1.18.0-beta1

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,6 +16,7 @@ jobs:
         go:
           - 1.16
           - 1.17
+          - 1.18.0-beta1
         clickhouse:
           - 19.11.12.69
           - 20.1.2.4
