GitHub Actions: schedule

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
       - v2
-  pull_request:
-  workflow_dispatch:
+  schedule:
+    - cron: "0 9 1 * *"
 
 jobs:
   run:
