--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -3,8 +3,12 @@ name: run-tests
 on:
   push:
     branches:
-      - master
+      - v1
       - v2
+  pull_request:
+    branches:
+      - v1
+      - v2    
   schedule:
     - cron: "0 9 1 * *"
 
