--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,6 +46,4 @@ jobs:
 
       - name: Run tests
         run: |
-          go test -v .
-          go test -v ./tests/..
-          go test -v ./lib/...
+          go test -v ./...
