--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -47,5 +47,5 @@ jobs:
       - name: Run tests
         run: |
           go test -v .
-          go test -v ./tests
+          go test -v ./tests/...
           go test -v ./lib/...
