send version in Make

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,4 +39,4 @@ jobs:
 
       - name: Run tests
         run: |
-          CLICKHOUSE_SERVER=${{ matrix.clickhouse }} make test
+          CLICKHOUSE_VERSION=${{ matrix.clickhouse }} make test
