--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ on:
     - cron: "0 9 1 * *"
 
 jobs:
-  run:
+  single-node:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
@@ -40,3 +40,29 @@ jobs:
       - name: Run tests
         run: |
           CLICKHOUSE_VERSION=${{ matrix.clickhouse }} make test
+
+  integration-tests-cloud:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        go:
+          - 1.18
+          - 1.19
+    steps:
+      - uses: actions/checkout@main
+
+      - name: Install Go ${{ matrix.go }}
+        uses: actions/setup-go@v2.1.5
+        with:
+          stable: false
+          go-version: ${{ matrix.go }}
+
+      - name: Run tests
+        env:
+          CLICKHOUSE_HOST: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST }}
+          CLICKHOUSE_CLOUD_PASSWORD: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
+          CLICKHOUSE_USE_DOCKER: false
+          CLICKHOUSE_USE_SSL: true
+        run: |
+          make test
