--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -65,4 +65,4 @@ jobs:
           CLICKHOUSE_USE_DOCKER: false
           CLICKHOUSE_USE_SSL: true
         run: |
-          make test
+          CLICKHOUSE_TEST_TIMEOUT=360s make test
