--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -62,8 +62,8 @@ jobs:
         env:
           #CLICKHOUSE_HOST: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_HOST }}
           #CLICKHOUSE_PASSWORD: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
-          CLICKHOUSE_HOST: loc2a1d1o9.eu-west-1.aws.clickhouse-staging.com
-          CLICKHOUSE_PASSWORD: HZPwuGMbHaZi
+          CLICKHOUSE_HOST: gzm3rvggk9.us-west-2.aws.clickhouse-staging.com
+          CLICKHOUSE_PASSWORD: XCgmPngPEMDb
           CLICKHOUSE_USE_DOCKER: false
           CLICKHOUSE_USE_SSL: true
         run: |
