--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -44,6 +44,7 @@ jobs:
   integration-tests-cloud:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       fail-fast: true
       matrix:
         go:
