--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -55,24 +55,15 @@ jobs:
       - uses: actions/checkout@main
       - uses: hashicorp/setup-terraform@v2
 
-      - name: Setup Terraform variables
-        id: vars
-        run: |-
-          cat > pipeline.auto.tfvars <<EOF
-          token_key = "${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}"
-          cluster_name = "go-client-test"
-          token_secret = "${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}"
-          cluster_password = "${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}"
-          organization_id = "${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}"
-          EOF
-
-      - name: echo file
-        run: |-
-          cat pipeline.auto.tfvars
-
       - name: Terraform Init
         id: init
         run: terraform init
+        env:
+          TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
+          TF_VAR_token_key: ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
+          TF_VAR_token_secret: ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}
+          TF_VAR_cluster_name: 'go-client-test'
+          TF_VAR_cluster_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
 
       - name: Terraform Validate
         id: validate
@@ -81,6 +72,13 @@ jobs:
       - name: Terraform Apply
         id: apply
         run: terraform apply -no-color
+        env:
+          TF_ACTION_WORKING_DIR: 'terraform'
+          TF_VAR_organization_id:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
+          TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
+          TF_VAR_token_secret:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}
+          TF_VAR_cluster_name:  'go-client-test'
+          TF_VAR_cluster_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
 
       - name: Install Go ${{ matrix.go }}
         uses: actions/setup-go@v2.1.5
