--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -44,6 +44,9 @@ jobs:
 
   integration-tests-cloud:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     strategy:
       max-parallel: 1
       fail-fast: true
@@ -52,8 +55,13 @@ jobs:
           - "1.19"
           - "1.20"
     steps:
-      - uses: actions/checkout@main
-      - uses: hashicorp/setup-terraform@v2
+      - name: Check Out Code
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2.0.3
+        with:
+          terraform_version: 1.3.4
 
       - name: Terraform Init
         id: init
