--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,34 +13,34 @@ on:
     - cron: "0 9 1 * *"
 
 jobs:
-#  single-node:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      fail-fast: true
-#      max-parallel: 1
-#      matrix:
-#        go:
-#          - "1.19"
-#          - "1.20"
-#        clickhouse: # https://github.com/ClickHouse/ClickHouse/blob/master/SECURITY.md#scope-and-supported-versions
-#          - "22.3"
-#          - "22.8"
-#          - "22.12"
-#          - "23.1"
-#          - "23.2"
-#          - "latest"
-#    steps:
-#      - uses: actions/checkout@main
-#
-#      - name: Install Go ${{ matrix.go }}
-#        uses: actions/setup-go@v2.1.5
-#        with:
-#          stable: false
-#          go-version: ${{ matrix.go }}
-#
-#      - name: Run tests
-#        run: |
-#          CLICKHOUSE_VERSION=${{ matrix.clickhouse }} make test
+  single-node:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      max-parallel: 1
+      matrix:
+        go:
+          - "1.19"
+          - "1.20"
+        clickhouse: # https://github.com/ClickHouse/ClickHouse/blob/master/SECURITY.md#scope-and-supported-versions
+          - "22.3"
+          - "22.8"
+          - "22.12"
+          - "23.1"
+          - "23.2"
+          - "latest"
+    steps:
+      - uses: actions/checkout@main
+
+      - name: Install Go ${{ matrix.go }}
+        uses: actions/setup-go@v2.1.5
+        with:
+          stable: false
+          go-version: ${{ matrix.go }}
+
+      - name: Run tests
+        run: |
+          CLICKHOUSE_VERSION=${{ matrix.clickhouse }} make test
 
   integration-tests-cloud:
     runs-on: ubuntu-latest
@@ -62,6 +62,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2.0.3
         with:
           terraform_version: 1.3.4
+          terraform_wrapper: false
 
       - name: Terraform Init
         id: init
@@ -71,7 +72,7 @@ jobs:
         id: validate
         run: terraform validate -no-color
 
-      - name: Set cluster name
+      - name: Set Cluster Name
         run: echo "TF_VAR_cluster_name=go_client_tests_$(date +'%Y_%m_%d_%H_%M_%S')" >> $GITHUB_ENV
 
       - name: Terraform Apply
@@ -84,7 +85,10 @@ jobs:
           TF_VAR_cluster_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
 
       - name: Set Host
-        run: echo "${{ steps.apply.outputs.stdout }}" | sed -n 's/.*CLICKHOUSE_HOST = "\(.*\)"/CLICKHOUSE_HOST = \1/p' >> $GITHUB_ENV
+        run: echo "CLICKHOUSE_HOST=$(terraform output -raw CLICKHOUSE_HOST)" >> $GITHUB_ENV
+
+      - name: Cluster Id
+        run: terraform output -raw CLUSTER_ID
 
       - name: Install Go ${{ matrix.go }}
         uses: actions/setup-go@v2.1.5
@@ -98,4 +102,13 @@ jobs:
           CLICKHOUSE_USE_DOCKER: false
           CLICKHOUSE_USE_SSL: true
         run: |
-          CLICKHOUSE_DIAL_TIMEOUT=20 CLICKHOUSE_TEST_TIMEOUT=600s CLICKHOUSE_QUORUM_INSERT=3 make test
+          CLICKHOUSE_DIAL_TIMEOUT=20 CLICKHOUSE_TEST_TIMEOUT=600s CLICKHOUSE_QUORUM_INSERT=2 make test
+
+      - name: Cleanup
+        if: always()
+        run: terraform destroy -no-color -auto-approve
+        env:
+          TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
+          TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
+          TF_VAR_token_secret:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}
+          TF_VAR_cluster_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
