--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,10 +14,9 @@ on:
 
 jobs:
   single-node:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, style-checker]
     strategy:
       fail-fast: true
-      max-parallel: 1
       matrix:
         go:
           - "1.20"
@@ -43,12 +42,11 @@ jobs:
 
   integration-tests-cloud:
     if: ${{ false }}  # disabled for now
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, style-checker]
     defaults:
       run:
         shell: bash
     strategy:
-      max-parallel: 1
       fail-fast: true
       matrix:
         go:
