--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Terraform Validate
         id: validate
-        run: terraform validate -no-color -state=${{ matrix.go }}.tfstate
+        run: terraform validate -no-color
 
       - name: Terraform Apply
         id: apply
