--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Check Out Code
         uses: actions/checkout@v3
 
+      - name: Resolve runner IP
+        run: echo "TF_VAR_allowed_cidr=$(curl -s ifconfig.me)/32" >> $GITHUB_ENV
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2.0.3
         with:
@@ -63,28 +66,35 @@ jobs:
 
       - name: Terraform Init
         id: init
+        working-directory: .github/cloud/
         run: terraform init
 
       - name: Terraform Validate
         id: validate
+        working-directory: .github/cloud/
         run: terraform validate -no-color
 
       - name: Set Service Name
+        working-directory: .github/cloud/
         run: echo "TF_VAR_service_name=go_client_tests_$(date +'%Y_%m_%d_%H_%M_%S')" >> $GITHUB_ENV
 
       - name: Terraform Apply
+        working-directory: .github/cloud/
         id: apply
-        run: terraform apply -no-color -auto-approve
+        run: terraform apply -no-color -auto-approve -input=false
         env:
           TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
           TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
           TF_VAR_token_secret:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}
           TF_VAR_service_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
+          TF_VAR_api_url: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_API_URL }}
 
       - name: Set Host
+        working-directory: .github/cloud/
         run: echo "CLICKHOUSE_HOST=$(terraform output -raw CLICKHOUSE_HOST)" >> $GITHUB_ENV
 
-      - name: Service Id
+      - name: Service ID
+        working-directory: .github/cloud/
         run: terraform output -raw SERVICE_ID
 
       - name: Install Go ${{ matrix.go }}
@@ -103,9 +113,11 @@ jobs:
 
       - name: Cleanup
         if: always()
+        working-directory: .github/cloud/
         run: terraform destroy -no-color -auto-approve
         env:
           TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
           TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
           TF_VAR_token_secret:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}
           TF_VAR_service_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
+          TF_VAR_api_url: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_API_URL }}
