--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,11 +5,9 @@ permissions: write-all
 on:
   push:
     branches:
-      - v1
       - main
   pull_request:
     branches:
-      - v1
       - main
 
 jobs:
@@ -74,14 +72,20 @@ jobs:
         working-directory: .github/cloud/
         run: terraform validate -no-color
 
-      - name: Set Service Name
+      - name: Set service name for pull request
+        if: github.event_name == 'pull_request'
         working-directory: .github/cloud/
-        run: echo "TF_VAR_service_name=go_client_tests_$(date +'%Y_%m_%d_%H_%M_%S')" >> $GITHUB_ENV
+        run: echo "TF_VAR_service_name=clickhouse-go ${{ matrix.go }} PR${{ github.event.pull_request.number }} $(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+
+      - name: Set service name for push
+        if: github.event_name == 'push'
+        working-directory: .github/cloud/
+        run: echo "TF_VAR_service_name=clickhouse-go ${{ matrix.go }} $(git rev-parse --short HEAD) $(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
       - name: Terraform Apply
         working-directory: .github/cloud/
         id: apply
-        run: terraform apply -no-color -auto-approve -input=false
+        run: terraform apply -no-color -auto-approve -input=false -lock=false
         env:
           TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
           TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
@@ -114,7 +118,7 @@ jobs:
       - name: Cleanup
         if: always()
         working-directory: .github/cloud/
-        run: terraform destroy -no-color -auto-approve
+        run: terraform destroy -no-color -auto-approve -input=false -lock=false
         env:
           TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
           TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
