--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,11 +5,9 @@ permissions: write-all
 on:
   push:
     branches:
-      - v1
       - main
   pull_request:
     branches:
-      - v1
       - main
 
 jobs:
@@ -41,7 +39,6 @@ jobs:
           CLICKHOUSE_VERSION=${{ matrix.clickhouse }} make test
 
   integration-tests-cloud:
-    if: ${{ false }}  # disabled for now
     runs-on: [self-hosted, style-checker]
     defaults:
       run:
@@ -50,11 +47,14 @@ jobs:
       fail-fast: true
       matrix:
         go:
-          - "1.19"
-          - "1.20"
+          - "1.22"
+          - "1.21"
     steps:
       - name: Check Out Code
         uses: actions/checkout@v3
+
+      - name: Resolve runner IP
+        run: echo "TF_VAR_allowed_cidr=$(curl -s ifconfig.me)/32" >> $GITHUB_ENV
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2.0.3
@@ -64,28 +64,41 @@ jobs:
 
       - name: Terraform Init
         id: init
+        working-directory: .github/cloud/
         run: terraform init
 
       - name: Terraform Validate
         id: validate
+        working-directory: .github/cloud/
         run: terraform validate -no-color
 
-      - name: Set Service Name
-        run: echo "TF_VAR_service_name=go_client_tests_$(date +'%Y_%m_%d_%H_%M_%S')" >> $GITHUB_ENV
+      - name: Set service name for pull request
+        if: github.event_name == 'pull_request'
+        working-directory: .github/cloud/
+        run: echo "TF_VAR_service_name=clickhouse-go ${{ matrix.go }} PR${{ github.event.pull_request.number }} $(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+
+      - name: Set service name for push
+        if: github.event_name == 'push'
+        working-directory: .github/cloud/
+        run: echo "TF_VAR_service_name=clickhouse-go ${{ matrix.go }} $(git rev-parse --short HEAD) $(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
       - name: Terraform Apply
+        working-directory: .github/cloud/
         id: apply
-        run: terraform apply -no-color -auto-approve
+        run: terraform apply -no-color -auto-approve -input=false -lock=false
         env:
           TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
           TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
           TF_VAR_token_secret:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}
           TF_VAR_service_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
+          TF_VAR_api_url: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_API_URL }}
 
       - name: Set Host
+        working-directory: .github/cloud/
         run: echo "CLICKHOUSE_HOST=$(terraform output -raw CLICKHOUSE_HOST)" >> $GITHUB_ENV
 
-      - name: Service Id
+      - name: Service ID
+        working-directory: .github/cloud/
         run: terraform output -raw SERVICE_ID
 
       - name: Install Go ${{ matrix.go }}
@@ -104,9 +117,11 @@ jobs:
 
       - name: Cleanup
         if: always()
-        run: terraform destroy -no-color -auto-approve
+        working-directory: .github/cloud/
+        run: terraform destroy -no-color -auto-approve -input=false -lock=false
         env:
           TF_VAR_organization_id: ${{ secrets.INTEGRATIONS_TEAM_TESTS_ORGANIZATION_ID }}
           TF_VAR_token_key:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_KEY }}
           TF_VAR_token_secret:  ${{ secrets.INTEGRATIONS_TEAM_TESTS_TOKEN_SECRET }}
           TF_VAR_service_password: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_PASSWORD }}
+          TF_VAR_api_url: ${{ secrets.INTEGRATIONS_TEAM_TESTS_CLOUD_API_URL }}
