--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   single-node:
-    runs-on: [self-hosted, style-checker]
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
@@ -20,9 +20,9 @@ jobs:
           - "1.22"
           - "1.21"
         clickhouse: # https://github.com/ClickHouse/ClickHouse/blob/master/SECURITY.md#scope-and-supported-versions
-          - "latest" # 24.1
+          - "latest" # 24.2
+          - "24.1"
           - "23.12"
-          - "23.11"
           - "23.8"
           - "23.3"
     steps:
