--- a/.github/workflows/run-tests-head.yml
+++ b/.github/workflows/run-tests-head.yml
@@ -6,9 +6,12 @@ on:
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
+  pull_request:
+    types: [labeled]
 
 jobs:
   test-ch-head:
+    if: github.event.label.name == 'tests:run-head' || github.event_name == 'push' || github.event_name == 'schedule'
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
