--- a/.github/workflows/run-tests-head.yml
+++ b/.github/workflows/run-tests-head.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Run tests
         run: |
-          CLICKHOUSE_VERSION=head make test
+          CLICKHOUSE_VERSION=head CLICKHOUSE_REUSE_CONTAINER=true make test
